2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx (mapvar::exists): Correct some more.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	Patch from "Mao, Bibo" <bibo.mao@intel.com>
	* translate.cxx (mapvar::exists): Correct 64-bit type mismatch.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (blacklisted_p): Add blacklist for some .return
	probes to kludge around bug #1345.
	* tapset/system_calls.stp: Add some %( %? %) conditionals to
	get closer to using tapset on 2.6.9 kernel.

2005-11-07  Frank Ch. Eigler  <fche@redhat.com>

	PR 1828.
	* tapsets.cxx (blacklisted_p): New function.  Add a few blacklist
	entries.
	* testsuite/semko/thirtythree.stp: New test.

2005-11-07  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/buildok/twentytwo.stp: Add another test for PR 1271.

2005-11-04  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (dwarf_derived_probe::emit_registrations): Add
	possible kprobe address prechecking logic.  Set kretprobes
	maxactive to zero.
	* translate.cxx (emit_module_init): Set a more helpful default
	probe_point value for use in registration errors.  Exit properly
	after registration failure of probe #0.

2005-11-04  Roland McGrath  <roland@redhat.com>

	* tapsets.cxx (add_probe_point): Use dwfl_module_relocation_info to
	get symbol name when dwfl_module_relocations has the info.

2005-11-03  Roland McGrath  <roland@redhat.com>

	* tapsets.cxx (add_probe_point): Use explicit test with assignment in
	while condition.

2005-11-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 1329.
	* tapsets.cxx (dwarf_query::add_probe_point): Look up section name
	containing given address.  Skip request if it came from .init.*.
	* testsuite/semko/thirtytwo.stp: New test.

2005-11-02  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (EXTRA_DIST): Add session.h.
	* Makefile.in: Regenerated.

2005-11-01  Frank Ch. Eigler  <fche@elastic.org>

	Sound advice from <drepper@redhat.com>:
	* configure.ac: Undo last change.